[#122] refactor: ExerciseRecordUpdateRequest 내부 객체 수정